--- a/.github/workflows/ci-train.yml
+++ b/.github/workflows/ci-train.yml
@@ -50,4 +50,18 @@ jobs:
       run: |
         pip install pytest
         pytest tests/test_inference.py
+    
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build Docker image
+      run: |
+        docker build -t chaan2835/advertising:latest .
+
+    - name: Push Docker image
+      run: |
+        docker push chaan2835/advertising:latest
 
